--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -35,7 +35,8 @@ jobs:
         shell: python
         run: |
           # -*- coding: utf-8 -*-
-          import os, json
+          import os, sys, json
+          sys.path.append('${{ github.workspace }}')
           import syno
 
           root = '' # os.path.dirname(os.path.abspath(__file__))
