--- a/config/configs.json
+++ b/config/configs.json
@@ -2,11 +2,11 @@
     "DS916+": {
         "satadom": 2,
         "synoinfo": {
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -75,12 +75,12 @@
             "maxdisks": "16",
             "internalportcfg": "0xffff",
             "esataportcfg": "0x00",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_leds_lp3943": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_leds_lp3943": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "buzzeroffen": "0xffff",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
@@ -147,11 +147,11 @@
     "DS920+": {
         "satadom": 2,
         "synoinfo": {
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -207,11 +207,11 @@
     "DS923+": {
         "satadom": 2,
         "synoinfo": {
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -253,12 +253,12 @@
         "synoinfo": {
             "internalportcfg": "0xffff",
             "esataportcfg": "0x00",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_leds_lp3943": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_leds_lp3943": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "buzzeroffen": "0xffff",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
@@ -325,11 +325,11 @@
     "DS1520+": {
         "satadom": 2,
         "synoinfo": {
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -385,11 +385,11 @@
     "DS1621+": {
         "satadom": 2,
         "synoinfo": {
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -449,13 +449,13 @@
         "synoinfo": {
             "internalportcfg": "0xffff",
             "esataportcfg": "0x00",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_bde_internal_10g": "",
-            "support_oob_ctl": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_bde_internal_10g": "no",
+            "support_oob_ctl": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -521,12 +521,12 @@
     "DS2422+": {
         "satadom": 2,
         "synoinfo": {
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "supportssdcache": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "supportssdcache": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -582,11 +582,11 @@
             "internalportcfg": "0x78FF",
             "esataportcfg": "0x0",
             "usbportcfg": "0x8700",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -647,12 +647,12 @@
             "internalportcfg": "0x78FF",
             "esataportcfg": "0x0",
             "usbportcfg": "0x8700",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "supportssdcache": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "supportssdcache": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -720,13 +720,13 @@
             "maxdisks": "24",
             "internalportcfg": "0xffff",
             "esataportcfg": "0x00",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_bde_internal_10g": "",
-            "support_oob_ctl": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_bde_internal_10g": "no",
+            "support_oob_ctl": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -784,11 +784,11 @@
     "DVA1622": {
         "satadom": 2,
         "synoinfo": {
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "buzzeroffen": "0xffff",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
@@ -839,12 +839,12 @@
         "satadom": 2,
         "synoinfo": {
             "esataportcfg": "0x00",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_bde_internal_10g": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_bde_internal_10g": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "supportnvme": "yes",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
@@ -906,12 +906,12 @@
         "satadom": 2,
         "synoinfo": {
             "esataportcfg": "0x00",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_bde_internal_10g": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_bde_internal_10g": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "supportnvme": "yes",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
@@ -972,11 +972,11 @@
     "FS2500": {
         "satadom": 2,
         "synoinfo": {
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -1030,11 +1030,11 @@
     "FS6400": {
         "satadom": 2,
         "synoinfo": {
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -1093,11 +1093,11 @@
             "internalportcfg": "0x78FF",
             "esataportcfg": "0x0",
             "usbportcfg": "0x8700",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -1155,12 +1155,12 @@
         "synoinfo": {
             "internalportcfg": "0xffff",
             "esataportcfg": "0x0",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_bde_internal_10g": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_bde_internal_10g": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -1219,12 +1219,12 @@
             "maxdisks": "24",
             "internalportcfg": "0xfffff",
             "esataportcfg": "0x00",
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_bde_internal_10g": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_bde_internal_10g": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -1233,10 +1233,10 @@
             "sn": "",
             "vid": "0x46f4",
             "pid": "0x0001",
-            "SataPortMap": "1",
-            "DiskIdxMap": "0",
             "mac1": "",
             "netif_num": 1,
+            "SataPortMap": "1",
+            "DiskIdxMap": "0",
             "syno_hw_version": "RS4021xs+",
             "syno_hdd_powerup_seq": 0,
             "HddHotplug": 0,
@@ -1291,13 +1291,13 @@
     "SA6400": {
         "satadom": 2,
         "synoinfo": {
-            "support_disk_compatibility": "",
-            "support_memory_compatibility": "",
-            "support_led_brightness_adjustment": "",
-            "support_bde_internal_10g": "",
-            "support_oob_ctl": "",
-            "support_syno_hybrid_raid": "",
-            "supportraidgroup": "",
+            "support_disk_compatibility": "no",
+            "support_memory_compatibility": "no",
+            "support_led_brightness_adjustment": "no",
+            "support_bde_internal_10g": "no",
+            "support_oob_ctl": "no",
+            "support_syno_hybrid_raid": "no",
+            "supportraidgroup": "no",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
