--- a/config/configs.json
+++ b/config/configs.json
@@ -152,6 +152,7 @@
             "support_led_brightness_adjustment": "no",
             "support_syno_hybrid_raid": "no",
             "supportraidgroup": "no",
+            "buzzeroffen": "0xffff",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -212,6 +213,7 @@
             "support_led_brightness_adjustment": "no",
             "support_syno_hybrid_raid": "no",
             "supportraidgroup": "no",
+            "buzzeroffen": "0xffff",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -330,6 +332,7 @@
             "support_led_brightness_adjustment": "no",
             "support_syno_hybrid_raid": "no",
             "supportraidgroup": "no",
+            "buzzeroffen": "0xffff",
             "rss_server": "http://example.com/null.xml",
             "rss_server_ssl": "https://example.com/null.xml",
             "rss_server_v2": "https://example.com/null"
@@ -445,7 +448,7 @@
         }
     },
     "DS1621xs+": {
-        "satadom": 2,
+        "satadom": 1,
         "synoinfo": {
             "internalportcfg": "0xffff",
             "esataportcfg": "0x00",
